--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-	"name": "fcc-exercise-tracker",
-	"version": "0.1.0",
+	"name": "exercise-tracker",
+	"version": "1.0.0",
 	"description": "A REST API project, part of Free Code Camp's curriculum",
+	"author": "Austin Weeks",
 	"main": "index.js",
 	"scripts": {
 		"start": "node index.js"
@@ -12,7 +13,7 @@
 		"cors": "^2.8.5"
 	},
 	"repository": {
-		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
+		"url": "https://github.com/austin-weeks/Exercise-Tracker"
 	},
 	"license": "MIT",
 	"keywords": [
