--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
 	"author": "Austin Weeks",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js"
+		"start": "node --watch index.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.20.2",
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
-		"cors": "^2.8.5"
+		"mongoose": "^8.4.3"
 	},
 	"repository": {
 		"url": "https://github.com/austin-weeks/Exercise-Tracker"
